chore: fixed text overflow problem in manage section modal

--- a/menu-app/src/app/control-panel/collapsed-section/collapsed-section.component.scss
+++ b/menu-app/src/app/control-panel/collapsed-section/collapsed-section.component.scss
@@ -15,6 +15,7 @@
         font-size: 30px;
         font-weight: 600;
         color: black;
+        overflow: hidden;
         & p {
           font-weight: 600;
         }
