--- a/menu-app/src/app/control-panel/manage-sections/manage-sections.component.scss
+++ b/menu-app/src/app/control-panel/manage-sections/manage-sections.component.scss
@@ -10,7 +10,7 @@
   margin-bottom: 20px;
 }
 .section-modal {
-  min-width: 500px
+  min-width: 400px
 }
 .btn-container-manage {
   float: right;
